Fix images in swipe being visible at the edges

--- a/common/app/assets/stylesheets/module/_lightbox-gallery.scss
+++ b/common/app/assets/stylesheets/module/_lightbox-gallery.scss
@@ -305,6 +305,7 @@ $thumbnailOuterWidth: 156px; // 140px + 16px margins
         width: 100%;
         position: relative;
         display: block;
+        overflow: hidden;
     }
 
     .gallery__nav--prev,
